--- a/src/Content/Content.css
+++ b/src/Content/Content.css
@@ -269,8 +269,8 @@
     .Section-drag-right{
         flex-flow: column-reverse;
     }
-    .Section.Section-tap{
-        flex-flow: column;
+    .Section-wrapper:nth-child(even)>.Section-tag{
+        flex-direction: column-reverse;
     }
     .Section-description{
         width: 100%;
